<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/String_name" />
    <EditText
        android:id="@+id/txNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/String_Lastname" />





    <EditText
        android:id="@+id/txApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

     <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/String_Usuario" />

    <EditText
        android:id="@+id/txUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/String_Password" />

    <EditText
        android:id="@+id/txPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        />

    <Button
        android:id="@+id/btnReguistar"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:hint="@string/String_Reguistrar"
        android:onClick="btnReguister"></Button>

</LinearLayout>